use the correct method to read all text from a file